--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,17 @@
-body{
+
+/*
+add shimmer to nav bar
+https://www.codeguage.com/blog/shimmer-effect-html-css
+*/
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root{
+    font-family: 'Roboto', sans-serif;
     background-color: #fbf7f5;
+}
+
+body{
     text-align: center;
 }
 
@@ -14,12 +26,42 @@ header {
     align-items: center;
 }
 
-#title{
-    font-size: 24px;
-    font-weight: 500;
-    color: rgb(62, 100, 68);
+
+#linkedin img {
+    width: 60px; 
+    height: 60px;
+}
+
+#github img{
+    width: 105px; 
+    height: 55px;
 
 }
+
+.contact {
+    font-size: 18px;
+    font-weight: 500;
+    color: rgb(62, 100, 68);
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center; 
+}
+
+.contact p {
+    margin: 0;
+}
+
+.contact a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.contact p.initials {
+    font-size: 40px;
+    font-weight: bold;
+}
+
 #aboutMe{
     font-size: 18px;
     color: rgb(143, 179, 132);
@@ -31,7 +73,6 @@ header {
     color: rgb(62, 100, 68);
 }
 
-
 #projects{
     font-size: 18px;
     color: rgb(143, 179, 132);
@@ -41,4 +82,11 @@ header {
 
 #projects:hover{
     color: rgb(62, 100, 68);
+}
+
+#intro{
+    font-weight: 700;
+    font-style: normal;
+    font-size: 24px;
+
 }
