--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,25 @@
-
-/*
-add shimmer to nav bar
-https://www.codeguage.com/blog/shimmer-effect-html-css
-*/
-
+/* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-:root{
-    font-family: 'Roboto', sans-serif;
-    background-color: #fbf7f5;
+/* Root Variables */
+:root {
+    --font-family: 'Roboto', sans-serif;
+    --background-color: #fbf7f5;
+    --header-background: lightgray;
+    --link-color: rgb(62, 100, 68);
+    --contact-color: rgb(62, 100, 68);
 }
 
-body{
+/* Global Styles */
+body {
+    font-family: var(--font-family);
+    background-color: var(--background-color);
     text-align: center;
 }
 
+/* Header Styles */
 .header {
-    background-color: lightgray;
+    background-color: var(--header-background);
     padding: 10px;
 }
 
@@ -26,26 +29,15 @@ header {
     align-items: center;
 }
 
-
-#linkedin img {
-    width: 60px; 
-    height: 60px;
-}
-
-#github img{
-    width: 105px; 
-    height: 55px;
-
-}
-
+/* Contact Section */
 .contact {
     font-size: 18px;
     font-weight: 500;
-    color: rgb(62, 100, 68);
+    color: var(--contact-color);
     display: flex;
     flex-direction: row;
     gap: 10px;
-    align-items: center; 
+    align-items: center;
 }
 
 .contact p {
@@ -62,31 +54,38 @@ header {
     font-weight: bold;
 }
 
-#aboutMe{
-    font-size: 18px;
-    color: rgb(143, 179, 132);
+/* Icon Sizes */
+#linkedin img, #github img {
+    width: auto;
+    height: auto;
+}
+
+#linkedin img {
+    width: 60px; 
+    height: 60px;
+}
+
+#github img {
+    width: 105px; 
+    height: 55px;
+}
+
+/* Navigation Links */
+#aboutMe, #projects {
+    font-size: 20px;
+    font-weight: 700;
+    color: var(--link-color);
     text-decoration: none;
-    padding: 10px;
+    padding: 5px;
 }
 
-#aboutMe:hover{
-    color: rgb(62, 100, 68);
+#aboutMe:hover, #projects:hover {
+    color: var(--link-hover-color);
 }
 
-#projects{
-    font-size: 18px;
-    color: rgb(143, 179, 132);
-    text-decoration: none;
-    padding: 10px;
-}
-
-#projects:hover{
-    color: rgb(62, 100, 68);
-}
-
-#intro{
+/* Intro Section */
+#intro {
     font-weight: 700;
     font-style: normal;
     font-size: 24px;
-
 }
