--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,12 @@
 /* Root Variables */
 :root {
     --font-family: 'Roboto', sans-serif;
-    --background-color: #fbf7f5;
-    --header-background: lightgray;
-    --link-color: rgb(62, 100, 68);
-    --contact-color: rgb(62, 100, 68);
+    --background-color: #dcc9b6ff;
+    --header-background: #727d71ff;
+    --link-color: #abc4abff;
+    --contact-color: #abc4abff;
+    --text-color: #364f6b;
+    --link-hover-color: #c4abbd;
 }
 
 /* Global Styles */
@@ -15,6 +17,7 @@ body {
     font-family: var(--font-family);
     background-color: var(--background-color);
     text-align: center;
+    color: var(--text-color);
 }
 
 /* Header Styles */
