--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,13 @@
 /* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 /* Root Variables */
 :root {
-    --font-family: 'Roboto', sans-serif;
+    --font-family: 'Concert One', sans-serif;
     --background-color: #dcc9b6ff;
     --header-background: #727d71ff;
     --link-color: #abc4abff;
@@ -87,8 +91,12 @@ header {
 }
 
 /* Intro Section */
-#intro {
+#name {
     font-weight: 700;
     font-style: normal;
-    font-size: 24px;
+    font-size: 120px;
+}
+
+#bio{
+    font-size: 30px;
 }
