--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,5 @@
 /* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
@@ -25,15 +23,15 @@ body {
 }
 
 /* Header Styles */
-.header {
-    background-color: var(--header-background);
-    padding: 10px;
-}
 
 header {
+    position: relative;
+    background-color: var(--header-background);
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-radius: 10px;
 }
 
 /* Contact Section */
@@ -91,10 +89,23 @@ header {
 }
 
 /* Intro Section */
+
+.bio-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 100vh;
+    padding: 20px;
+    margin: 50px;
+}
+
+.name-container{
+    width: 610px;
+}
+
 #name {
     font-weight: 700;
-    font-style: normal;
-    font-size: 120px;
+    font-size: 200px;
 }
 
 #bio{
