--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
+
 /* Root Variables */
 :root {
     --font-family: 'Concert One', sans-serif;
@@ -15,23 +16,36 @@
 }
 
 /* Global Styles */
-body {
+#index-body, #projects-body {
     font-family: var(--font-family);
     background-color: var(--background-color);
     text-align: center;
     color: var(--text-color);
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Header Styles */
 
-header {
-    position: relative;
+.header{
+    width: 100%;
+    display: flex;
+    justify-content: center;
     background-color: var(--header-background);
+    border-radius: 10px;
+    box-shadow:  0px 4px 8px rgba(0, 0, 0, 0.1);
+
+
+}
+
+header {
     padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 10px;
+    width: 100%;
 }
 
 /* Contact Section */
@@ -76,7 +90,7 @@ header {
 }
 
 /* Navigation Links */
-#aboutMe, #projects {
+#aboutMe, #projects, #homePage {
     font-size: 20px;
     font-weight: 700;
     color: var(--link-color);
@@ -84,7 +98,7 @@ header {
     padding: 5px;
 }
 
-#aboutMe:hover, #projects:hover {
+#aboutMe:hover, #projects:hover, #homePage:hover {
     color: var(--link-hover-color);
 }
 
@@ -118,4 +132,70 @@ header {
     font-size: 30px;
     margin-top: 30px; 
     text-align: center;
+}
+
+
+
+
+/*    projects css */
+
+.tile-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    max-width: 1200px;
+    min-height: 100vh;
+    margin: 0 auto;
+}
+
+.tile {
+    background-color: var(--header-background);
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+    text-align: center;
+    cursor: pointer;
+    flex: 1 1 200px;
+    max-width: 300px;
+}
+
+.tile:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.tile img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+.tile .content {
+    padding: 15px;
+}
+
+.tile .content h3 {
+    margin: 0;
+    font-size: 1.2em;
+    color: var(--text-color);
+}
+
+.tile .content p {
+    margin: 10px 0;
+    color: var(--text-color);
+    font-size: 0.9em;
+}
+
+.tile .content a {
+    color: var(--link-color);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.tile .content a:hover {
+    color: var(--link-hover-color)
 }
